# SpatialReasoning

./: .gitmodules  Proposal.md  README.md  introduction.md  populate_tasks.ps1  populate_tasks.sh  pyproject.toml  task_to_benchtools.sh
SpatialReasoning_Benchtools/tasks/WIP_3d_rotations_single_common_sense/: template.txt  values.csv
SpatialReasoning_Benchtools/tasks/final_2d_combined_transformations_multi/: template.txt  values.csv
SpatialReasoning_Benchtools/tasks/final_2d_rotations_multi/: template.txt  values.csv
SpatialReasoning_Benchtools/tasks/final_2d_rotations_single/: template.txt  values.csv
SpatialReasoning_Benchtools/tasks/final_2d_translations_multi/: template.txt  values.csv
SpatialReasoning_Benchtools/tasks/final_2d_translations_single/: template.txt  values.csv
SpatialReasoning_Benchtools/tasks/final_3d_combined_transformations_multi/: template.txt  values.csv
WIP_TASKS/WIP_3d_combined_transformations_common_sense/: config.yml  template.txt  values.csv
WIP_TASKS/WIP_3d_translations_single_common_sense/: config.yml  template.txt  values.csv
benchmark_redux/: benchmark_analysis.py  experiment.ipynb
dice_rotation_task_generator/: dice_rotation_task_generator.py  die.py
experiments/complex_set/: experiment.ipynb
experiments/simple_set/: experiment.ipynb
src/spatialreasoning/: __init__.py  __main__.py  benchmark_analysis.py  benchmark_io.py  benchmark_orchestrator.py  benchmark_runner.py  benchmark_scoring.py  benchmark_validation.py  cli.py  gen_combined.py  gen_rotations.py  gen_translations.py
(+56 files in other folders)
