[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spatialreasoning"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ollama",
    "pyyaml",
    "matplotlib",
]

[project.scripts]
spatialreasoning = "spatialreasoning.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spatialreasoning = ["tasks/**/*"]
